Add braccio_ros package with initial implementation and configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,8 @@ CATKIN_IGNORE
 
 # Python
 .pydevproject
+src/braccio_ros/braccio_ros/__init__.py
+src/braccio_ros/test/test_pep257.py
+src/braccio_ros/test/test_flake8.py
+src/braccio_ros/test/test_copyright.py
+src/braccio_ros/resource/braccio_ros
